Changes for 2.1.6

New features:

Bug fixes:
........S. [ZBX-6987] fixed possible crash in value cache when freeing items with out of order values (wiper)
..F....... [ZBX-7024] fixed filtering by application name "0" in Monitoring > Overview dropdown (Ivo)
A.F....... [ZBX-7026] removed automatic changing of "error" field when trigger and trigger prototype expression is changed (Ivo)
..F....... [ZBX-7027] improved request of proxies in Configuration > Hosts list and request of hosts in Administration > DM > Proxies (Ivo)
..F....... [ZBX-3878] fixed memory leaks in slide shows (Eduard)
..F....... [ZBX-7017] fixed problem with unwanted lists of services in IT services popup window (Vitalij)
..F....... [ZBX-6982] changed background color in user and user group edit form for select tags (Vitalij)
..F....... [ZBX-6973] fixed sql error in postgres database on saving host (Vitalij)

--------------------------------------------------------------------------------
Changes for 2.1.5

New features:
...G...... [ZBXNEXT-836] added windows agent wmi query support with wmi.get key (wiper)
........S. [ZBXNEXT-1267] changed network discovery to take in account proxies when identifying discovered hosts (wiper)
........S. [ZBXNEXT-322] improved value cache multi-process performance by unlocking it during database requests (wiper)
..F.....S. [ZBX-6883] added possibility to use empty parameters in the trigger functions (Sasha)
.......PS. [ZBXNEXT-1633] added vSphere (vCenter hypervisor) datastore and network monitoring keys (wiper)
A.F.I..... [ZBXNEXT-1786] implemented script name tree in menu popups (Eduard, Sasha)
..F....... [ZBXNEXT-1786] redesigned menu popups using jQuery Menu (Eduard)
..F....... [ZBXNEXT-1786] updated jQuery-ui to latest (Eduard)
..F....... [ZBX-6976] changed minimal php version parameter (Vitalij)
..F....... [ZBX-6846] the print link work with javascript instead of reloading the whole page (Vitalij)

Bug fixes: