@@ -3,6 +3,7 @@ Changes for 2.1.6
 New features:
 
 Bug fixes:
+........S. [ZBX-6904] now ESC.HISTORY macro creates the same message content whithin the same escalation step when notification is sent to multiple recipients (igors)
 ........S. [ZBX-6987] fixed possible crash in value cache when freeing items with out of order values (wiper)
 ..F....... [ZBX-7024] fixed filtering by application name "0" in Monitoring > Overview dropdown (Ivo)
 A.F....... [ZBX-7026] removed automatic changing of "error" field when trigger and trigger prototype expression is changed (Ivo)
